Update 03-Milestone Project 2 - Complete Walkthrough Solution.ipynb
Moved player_chips out side of while loop so it is not reset to 100 after each hand.

--- a/08-Milestone Project - 2/03-Milestone Project 2 - Complete Walkthrough Solution.ipynb
+++ b/08-Milestone Project - 2/03-Milestone Project 2 - Complete Walkthrough Solution.ipynb
@@ -169,66 +169,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "The deck has:\n",
-      " Two of Hearts\n",
-      " Three of Hearts\n",
-      " Four of Hearts\n",
-      " Five of Hearts\n",
-      " Six of Hearts\n",
-      " Seven of Hearts\n",
-      " Eight of Hearts\n",
-      " Nine of Hearts\n",
-      " Ten of Hearts\n",
-      " Jack of Hearts\n",
-      " Queen of Hearts\n",
-      " King of Hearts\n",
-      " Ace of Hearts\n",
-      " Two of Diamonds\n",
-      " Three of Diamonds\n",
-      " Four of Diamonds\n",
-      " Five of Diamonds\n",
-      " Six of Diamonds\n",
-      " Seven of Diamonds\n",
-      " Eight of Diamonds\n",
-      " Nine of Diamonds\n",
-      " Ten of Diamonds\n",
-      " Jack of Diamonds\n",
-      " Queen of Diamonds\n",
-      " King of Diamonds\n",
-      " Ace of Diamonds\n",
-      " Two of Spades\n",
-      " Three of Spades\n",
-      " Four of Spades\n",
-      " Five of Spades\n",
-      " Six of Spades\n",
-      " Seven of Spades\n",
-      " Eight of Spades\n",
-      " Nine of Spades\n",
-      " Ten of Spades\n",
-      " Jack of Spades\n",
-      " Queen of Spades\n",
-      " King of Spades\n",
-      " Ace of Spades\n",
-      " Two of Clubs\n",
-      " Three of Clubs\n",
-      " Four of Clubs\n",
-      " Five of Clubs\n",
-      " Six of Clubs\n",
-      " Seven of Clubs\n",
-      " Eight of Clubs\n",
-      " Nine of Clubs\n",
-      " Ten of Clubs\n",
-      " Jack of Clubs\n",
-      " Queen of Clubs\n",
-      " King of Clubs\n",
-      " Ace of Clubs\n"
-     ]
+     "name": "stdout",
+     "text": "The deck has:\n Two of Hearts\n Three of Hearts\n Four of Hearts\n Five of Hearts\n Six of Hearts\n Seven of Hearts\n Eight of Hearts\n Nine of Hearts\n Ten of Hearts\n Jack of Hearts\n Queen of Hearts\n King of Hearts\n Ace of Hearts\n Two of Diamonds\n Three of Diamonds\n Four of Diamonds\n Five of Diamonds\n Six of Diamonds\n Seven of Diamonds\n Eight of Diamonds\n Nine of Diamonds\n Ten of Diamonds\n Jack of Diamonds\n Queen of Diamonds\n King of Diamonds\n Ace of Diamonds\n Two of Spades\n Three of Spades\n Four of Spades\n Five of Spades\n Six of Spades\n Seven of Spades\n Eight of Spades\n Nine of Spades\n Ten of Spades\n Jack of Spades\n Queen of Spades\n King of Spades\n Ace of Spades\n Two of Clubs\n Three of Clubs\n Four of Clubs\n Five of Clubs\n Six of Clubs\n Seven of Clubs\n Eight of Clubs\n Nine of Clubs\n Ten of Clubs\n Jack of Clubs\n Queen of Clubs\n King of Clubs\n Ace of Clubs\n"
     }
    ],
    "source": [
@@ -286,14 +234,12 @@
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "14"
-      ]
+      "text/plain": "13"
      },
-     "execution_count": 6,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 6
     }
    ],
    "source": [
@@ -315,15 +261,14 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "Nine of Hearts\n",
-      "Five of Hearts\n"
-     ]
+     "name": "stdout",
+     "text": "Jack of Hearts\nThree of Spades\n"
     }
    ],
    "source": [
@@ -634,103 +579,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "Welcome to BlackJack! Get as close to 21 as you can without going over!\n",
-      "    Dealer hits until she reaches 17. Aces count as 1 or 11.\n",
-      "How many chips would you like to bet? 5\n",
-      "\n",
-      "Dealer's Hand:\n",
-      " <card hidden>\n",
-      " Seven of Spades\n",
-      "\n",
-      "Player's Hand:\n",
-      " Queen of Spades\n",
-      " Nine of Hearts\n",
-      "\n",
-      "Dealer's Hand:\n",
-      " Ace of Clubs\n",
-      " Seven of Spades\n",
-      "Dealer's Hand = 18\n",
-      "\n",
-      "Player's Hand:\n",
-      " Queen of Spades\n",
-      " Nine of Hearts\n",
-      "Player's Hand = 19\n",
-      "Player wins!\n",
-      "\n",
-      "Player's winnings stand at 105\n",
-      "Would you like to play another hand? Enter 'y' or 'n' y\n",
-      "Welcome to BlackJack! Get as close to 21 as you can without going over!\n",
-      "    Dealer hits until she reaches 17. Aces count as 1 or 11.\n",
-      "How many chips would you like to bet? 5\n",
-      "\n",
-      "Dealer's Hand:\n",
-      " <card hidden>\n",
-      " Nine of Clubs\n",
-      "\n",
-      "Player's Hand:\n",
-      " Queen of Diamonds\n",
-      " Ace of Hearts\n",
-      "Would you like to Hit or Stand? Enter 'h' or 's' s\n",
-      "Player stands. Dealer is playing.\n",
-      "\n",
-      "Dealer's Hand:\n",
-      " <card hidden>\n",
-      " Nine of Clubs\n",
-      "\n",
-      "Player's Hand:\n",
-      " Queen of Diamonds\n",
-      " Ace of Hearts\n",
-      "\n",
-      "Dealer's Hand:\n",
-      " Eight of Clubs\n",
-      " Nine of Clubs\n",
-      "Dealer's Hand = 17\n",
-      "\n",
-      "Player's Hand:\n",
-      " Queen of Diamonds\n",
-      " Ace of Hearts\n",
-      "Player's Hand = 21\n",
-      "Player wins!\n",
-      "\n",
-      "Player's winnings stand at 105\n",
-      "Would you like to play another hand? Enter 'y' or 'n' y\n",
-      "Welcome to BlackJack! Get as close to 21 as you can without going over!\n",
-      "    Dealer hits until she reaches 17. Aces count as 1 or 11.\n",
-      "How many chips would you like to bet? 65\n",
-      "\n",
-      "Dealer's Hand:\n",
-      " <card hidden>\n",
-      " Four of Spades\n",
-      "\n",
-      "Player's Hand:\n",
-      " Queen of Clubs\n",
-      " Four of Diamonds\n",
-      "Would you like to Hit or Stand? Enter 'h' or 's' h\n",
-      "\n",
-      "Dealer's Hand:\n",
-      " <card hidden>\n",
-      " Four of Spades\n",
-      "\n",
-      "Player's Hand:\n",
-      " Queen of Clubs\n",
-      " Four of Diamonds\n",
-      " Eight of Diamonds\n",
-      "Player busts!\n",
-      "\n",
-      "Player's winnings stand at 35\n",
-      "Would you like to play another hand? Enter 'y' or 'n' n\n",
-      "Thanks for playing!\n"
-     ]
+     "name": "stdout",
+     "text": "Welcome to BlackJack! Get as close to 21 as you can without going over!\n    Dealer hits until she reaches 17. Aces count as 1 or 11.\n\nDealer's Hand:\n <card hidden>\n Four of Clubs\n\nPlayer's Hand:\n Two of Clubs\n Jack of Hearts\n\nDealer's Hand:\n <card hidden>\n Four of Clubs\n\nPlayer's Hand:\n Two of Clubs\n Jack of Hearts\n Six of Hearts\nPlayer stands. Dealer is playing.\n\nDealer's Hand:\n <card hidden>\n Four of Clubs\n\nPlayer's Hand:\n Two of Clubs\n Jack of Hearts\n Six of Hearts\n\nDealer's Hand:\n Eight of Clubs\n Four of Clubs\n Eight of Hearts\nDealer's Hand = 20\n\nPlayer's Hand:\n Two of Clubs\n Jack of Hearts\n Six of Hearts\nPlayer's Hand = 18\nDealer wins!\n\nPlayer's winnings stand at 90\nThanks for playing!\n"
     }
    ],
    "source": [
+    "# Set up the Player's chips outside of loop to keep \n",
+    "# player_chips accurate after many rounds\n",
+    "player_chips = Chips()  # remember the default value is 100  \n",
+    "\n",
     "while True:\n",
     "    # Print an opening statement\n",
     "    print('Welcome to BlackJack! Get as close to 21 as you can without going over!\\n\\\n",
@@ -748,9 +612,6 @@
     "    dealer_hand.add_card(deck.deal())\n",
     "    dealer_hand.add_card(deck.deal())\n",
     "            \n",
-    "    # Set up the Player's chips\n",
-    "    player_chips = Chips()  # remember the default value is 100    \n",
-    "    \n",
     "    # Prompt the Player for their bet\n",
     "    take_bet(player_chips)\n",
     "    \n",
@@ -832,7 +693,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.8.5-final"
   }
  },
  "nbformat": 4,
