deleted a few statements and added a few.

--- a/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
+++ b/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
@@ -29,7 +29,7 @@
     "collapsed": true
    },
    "source": [
-    "Write (or just say out loud to yourself) a brief description of all the following Object Types and Data Structures we've learned about. You can edit the cell below by double clicking on it. Really this is just to test if you know the difference between these, so feel free to just think about it, since your answers are self-graded."
+    "Write a brief description of all the following Object Types and Data Structures we've learned about. You can edit the cell below by double clicking on it. Really this is just to test if you know the difference between these, so feel free to just think about it, since your answers are self-graded."
    ]
   },
   {
@@ -57,7 +57,7 @@
     "\n",
     "Write an equation that uses multiplication, division, an exponent, addition, and subtraction that is equal to 100.25.\n",
     "\n",
-    "Hint: This is just to test your memory of the basic arithmetic commands, work backwards from 100.25"
+    "Hint: This is just to test your memory of the basic arithmetic commands"
    ]
   },
   {
@@ -73,7 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer these 3 questions without typing code. Then type code to check your answer.\n",
+    "Answer these 3 questions without typing code.\n",
     "\n",
     "    What is the value of the expression 4 * (6 + 5)\n",
     "    \n",
@@ -552,7 +552,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Great Job on your first assessment! "
+    "## Great Job on your first assessment!Wohooooooo "
    ]
   }
  ],
